<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:text="@string/add_note"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_note_background"
            android:padding="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:src="@drawable/ic_post_add"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            android:tint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/title"
            tools:ignore="UseAppTint"
            android:layout_marginRight="10dp" />
        <EditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintTop_toBottomOf="@id/title"/>
        <EditText
            android:id="@+id/link"
            android:layout_marginBottom="30dp"
            android:hint="@string/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorTextPrimary"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:layout_marginBottom="10dp"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/note_add_background"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/dialog_layout"
        app:layout_constraintTop_toBottomOf="@id/dialog_layout"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_marginBottom="10dp"
        android:text="@string/ok"
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/note_add_background"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/dialog_layout"
        app:layout_constraintTop_toBottomOf="@id/dialog_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp" />
</androidx.constraintlayout.widget.ConstraintLayout>