<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/show"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.makeramen.roundedimageview.RoundedImageView
                app:riv_corner_radius="100dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/header"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/name"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="right|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlHardcoded,UseCompoundDrawables">
                    <TextView
                        android:gravity="center_vertical"
                        android:id="@+id/link"
                        android:paddingLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/link"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        tools:ignore="RtlSymmetry" />
                    <ImageView
                        android:padding="5dp"
                        android:contentDescription="@string/share"
                        android:id="@+id/share"
                        android:src="@drawable/ic_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>