<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.AboutActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorNote"
            app:expandedTitleMarginStart="15dp"
            app:expandedTitleMarginBottom="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/header"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/title_background"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/about"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:background="@drawable/about_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:background="@drawable/about_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kyaw_thu"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:layout_marginStart="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:background="@drawable/about_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/email"
                    android:clickable="true"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:background="@drawable/about_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copypaste673_gmail_com"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:layout_marginStart="10dp"
                    android:focusable="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:background="@drawable/about_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"/>
                <TextView
                    android:id="@+id/phone"
                    android:clickable="true"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:background="@drawable/about_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_09750534996"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:layout_marginStart="10dp"
                    android:focusable="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="10dp"
                    android:background="@drawable/about_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/build_app"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:background="@drawable/about_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7_9_2020"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:layout_marginStart="10dp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/credit_web_site_page"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/google"
                    android:layout_margin="1dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/google_logo" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/youtube"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="1dp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:gravity="center"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/youtube_logo" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/firebase"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"                    app:cardCornerRadius="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginStart="10dp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:gravity="center"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/firebase_logo" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/bhiandroid"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"                    app:cardCornerRadius="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginStart="10dp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:gravity="center"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bhiandroid_logo" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/stacktips"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"                    app:cardCornerRadius="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginStart="10dp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:gravity="center"
                        android:layout_margin="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/stacktips_logo" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/journaldev"
                android:layout_margin="1dp"
                app:cardCornerRadius="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/journaldev_logo" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/javatpoint"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                app:cardCornerRadius="10dp"
                android:layout_width="wrap_content"
                android:layout_height="50dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/javatpoint_logo" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:background="@color/colorAccent"
        android:src="@drawable/ic_favorite"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|end|right"
        app:maxImageSize="28dp"
        android:layout_marginRight="25dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>