<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorNote"
    android:id="@+id/main"
    tools:context=".Activity.MainActivity">
    <LinearLayout
        android:background="@android:color/transparent"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/app_title"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_launcher"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                tools:ignore="UseAppTint" />

            <TextView
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.SearchView
                android:layout_marginBottom="20dp"
                android:focusable="false"
                android:gravity="center"
                android:id="@+id/search"
                android:background="@drawable/searchview_background"
                android:queryHint="Search..."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:background="@drawable/searchview_background"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:id="@+id/favorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:src="@drawable/ic_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name" />
                    <TextView
                        android:overScrollMode="never"
                        android:paddingLeft="5dp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/searchview_background"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:id="@+id/note"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:tint="@color/colorNote"
                        android:src="@drawable/ic_post_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        tools:ignore="UseAppTint" />
                    <TextView
                        android:paddingLeft="5dp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/searchview_background"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:id="@+id/about"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:tint="@color/colorNote"
                        android:src="@drawable/ic_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/app_name"
                        tools:ignore="UseAppTint" />
                    <TextView
                        android:paddingLeft="5dp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/category_title"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name" />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.viewpager.widget.ViewPager
                android:foregroundGravity="center"
                android:id="@+id/viewPager"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="270dp"/>
            <LinearLayout
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/link_title"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name" />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/links"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>